<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawer_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/drawer_profile" />
    <item
        android:id="@+id/drawer_withdrawalDetails"
        android:icon="@drawable/ic_withdraw"
        android:title="@string/drawer_withdrawal_details" />
    <item
        android:id="@+id/drawer_create_id"
        android:icon="@drawable/ic_profile_add"
        android:title="@string/drawer_creat_id" />
    <item
        android:id="@+id/drawer_refer"
        android:icon="@drawable/ic_refer"
        android:title="@string/drawer_refer_amp_earn" />
    <item
        android:id="@+id/drawer_terms"
        android:icon="@drawable/ic_terms"
        android:title="@string/drawer_terms" />
    <group
        android:menuCategory="container"
        android:enabled="true"
        android:id="@+id/gp">
        <item
            android:id="@+id/drawer_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/drawer_notifications" />
        <item
            android:id="@+id/drawer_help"
            android:icon="@drawable/ic_help"
            android:title="@string/drawer_help" />
        <item
            android:id="@+id/drawer_howto"
            android:icon="@drawable/ic_howtouse"
            android:title="@string/drawer_how_to_use" />
        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/drawer_logout" />
    </group>
</menu>